welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:29: error: not found: value c
					faireV(c:Color)
                                               ^MethodsPicture:41: error: not enough arguments for method Motif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
				Motif()
                                     ^MethodsPicture:53: error: not found: value faireV
faireV(Color.YELLOW)
^MethodsPicture:54: error: not found: value faireV
faireV(Color.RED)
^MethodsPicture:55: error: not found: value faireV
faireV(Color.BLUE)
^MethodsPicture:56: error: not found: value faireV
faireV(Color.GREEN)
^MethodsPicture:35: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime85.MethodsPicture'
override def run()
             ^